--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Video Page with Stickman</title>
+  <title>Simple Video Page</title>
   <style>
     body {
       background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('https://source.unsplash.com/1600x900/?nature,water'); /* Background with gradient and image */
@@ -39,7 +39,6 @@
       color: white;
       font-size: 12px;
       cursor: pointer;
-      position: relative; /* For positioning the stickman */
     }
     .buttons-container button:hover {
       background-color: #0056b3;
@@ -57,12 +56,14 @@
     }
     .stickman {
       position: absolute;
-      width: 40px; /* Adjust size as needed */
-      height: 50px; /* Adjust size as needed */
+      width: 50px;
+      height: 50px;
+      background-image: url('stickman.png'); /* Replace with your stickman image */
+      background-size: cover;
       bottom: 10px;
-      left: 50%; /* Center horizontally */
+      left: 50%;
       transform: translateX(-50%);
-      display: none; /* Hide initially */
+      display: none; /* Initially hidden */
     }
   </style>
 </head>
@@ -75,11 +76,13 @@
       <source src="theredone (1).mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
-    <div class="buttons-container redone-buttons-container hidden" id="redoneButtons">
-      <button class="start-button" data-video-id="redoneVideo">Start Video</button>
-    </div>
-    <div class="stickman" id="stickmanRedone">🎩👀</div>
   </div>
+
+  <!-- Buttons for switching between The Red One video parts -->
+  <div class="buttons-container redone-buttons-container hidden" id="redoneButtons"></div>
+
+  <!-- Stickman -->
+  <div class="stickman" id="stickmanRedone"></div>
 
   <!-- Second video (Moana, split into parts) -->
   <div class="hidden">
@@ -88,11 +91,13 @@
       <source src="Moana(1).mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
-    <div class="buttons-container hidden" id="moanaButtons">
-      <button class="start-button" data-video-id="moanaVideo">Start Video</button>
-    </div>
-    <div class="stickman" id="stickmanMoana">🎩👀</div>
   </div>
+
+  <!-- Buttons for switching between Moana video parts -->
+  <div class="buttons-container hidden" id="moanaButtons"></div>
+
+  <!-- Stickman -->
+  <div class="stickman" id="stickmanMoana"></div>
 
   <!-- Third video (The Paris Under) -->
   <div class="hidden">
@@ -101,48 +106,125 @@
       <source src="Theparisunder.mp4" type="video/webm">
       Your browser does not support the video tag.
     </video>
-    <div class="buttons-container hidden" id="theparisButtons">
-      <button class="start-button" data-video-id="theparisunderVideo">Start Video</button>
-    </div>
-    <div class="stickman" id="stickmanParis">🎩👀</div>
+  </div>
+
+  <!-- Stickman -->
+  <div class="stickman" id="stickmanParis"></div>
+
+  <!-- Fourth video (The Red One - Full) -->
+  <div>
+    <div class="video-title">The Red One - Full</div>
+    <video controls>
+      <source src="https://www.dropbox.com/scl/fi/ygwlg742cw4lj15rzyrci/theredonemovie.mp4?rlkey=ftgy82av3zzf8mzeog5yyvzm2&dl=1" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+
+  <!-- Fifth video (Moana 2 - Full) -->
+  <div>
+    <div class="video-title">Moana 2 - Full</div>
+    <video controls>
+      <source src="https://www.dropbox.com/scl/fi/0kw6n7jkfqicgm94hwkk9/Moana-2_1080P_480P.mp4?rlkey=87jrwv5fjf5l3dyu0uridgq9x&dl=1" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+
+  <!-- Sixth video (The Paris Under - Full) -->
+  <div>
+    <div class="video-title">The Paris Under - Full</div>
+    <video controls>
+      <source src="https://www.dropbox.com/scl/fi/9ku33jabzb7tilyqn78th/Under.Paris.2024.540p.x265.AAC.-9jaRocks.Com.mp4?rlkey=1p7wuean5x9raqi4dvnlo7o7a&dl=1" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
   </div>
 
   <script>
-    // Function to show stickman animation
-    function showStickman(videoId, stickmanId, startButton) {
-      const stickman = document.getElementById(stickmanId);
+    // Function to show and hide the stickman animation
+    function showStickman(id) {
+      const stickman = document.getElementById(id);
       stickman.style.display = 'block'; // Show stickman
-      stickman.classList.add('stickman-animation'); // Add animation class
-
-      stickman.addEventListener('animationend', () => {
-        stickman.style.display = 'none'; // Hide stickman after animation ends
-      });
-
-      // Click start button to play video after stickman finishes interaction
-      startButton.addEventListener('click', () => {
-        document.getElementById(videoId).play();
-      });
+      setTimeout(() => {
+        stickman.style.transform = 'translateY(-50px)'; // Jump effect
+        setTimeout(() => {
+          stickman.style.display = 'none'; // Hide stickman
+        }, 1000); // Wait for jump animation to complete
+      }, 500); // Delay before showing stickman
     }
 
-    // Apply stickman animation for The Red One video
-    document.querySelectorAll('.start-button[data-video-id="redoneVideo"]').forEach(button => {
-      button.addEventListener('click', function() {
-        showStickman('redoneVideo', 'stickmanRedone', button);
+    // For the first video (The Red One)
+    const redoneVideo = document.getElementById('redoneVideo');
+    const redoneSegments = [
+      'theredone (1).mp4', 'theredone (2).mp4', 'theredone (3).mp4', 'theredone (4).mp4',
+      'theredone (5).mp4', 'theredone (6).mp4', 'theredone (7).mp4', 'theredone (8).mp4',
+      'theredone (9).mp4', 'theredone (10).mp4', 'theredone (11).mp4', 'theredone (12).mp4',
+      'theredone (13).mp4', 'theredone (14).mp4', 'theredone (15).mp4', 'theredone (16).mp4'
+    ];
+
+    const redoneButtonsContainer = document.getElementById('redoneButtons');
+
+    // Create buttons dynamically for The Red One segments
+    redoneSegments.forEach((segment, index) => {
+      const button = document.createElement('button');
+      button.textContent = `Part ${index + 1}`;
+      button.addEventListener('click', () => {
+        redoneVideo.src = segment;
+        redoneVideo.play();
+        showStickman('stickmanRedone'); // Show stickman animation
       });
+      redoneButtonsContainer.appendChild(button);
     });
 
-    // Apply stickman animation for Moana video
-    document.querySelectorAll('.start-button[data-video-id="moanaVideo"]').forEach(button => {
-      button.addEventListener('click', function() {
-        showStickman('moanaVideo', 'stickmanMoana', button);
-      });
+    let currentRedoneSegment = 0;
+
+    redoneVideo.addEventListener('ended', () => {
+      currentRedoneSegment++;
+      if (currentRedoneSegment < redoneSegments.length) {
+        redoneVideo.src = redoneSegments[currentRedoneSegment];
+        redoneVideo.play();
+        showStickman('stickmanRedone'); // Show stickman animation
+      }
     });
 
-    // Apply stickman animation for The Paris Under video
-    document.querySelectorAll('.start-button[data-video-id="theparisunderVideo"]').forEach(button => {
-      button.addEventListener('click', function() {
-        showStickman('theparisunderVideo', 'stickmanParis', button);
+    // For the second video (Moana)
+    const moanaVideo = document.getElementById('moanaVideo');
+    const moanaSegments = [
+      'Moana(1).mp4', 'Moana(2).mp4', 'Moana(3).mp4', 'Moana(4).mp4',
+      'Moana(5).mp4', 'Moana(6).mp4', 'Moana(7).mp4', 'Moana(8).mp4',
+      'Moana(9).mp4', 'Moana(10).mp4', 'Moana(11).mp4', 'Moana(12).mp4',
+      'Moana(13).mp4', 'Moana(14).mp4', 'Moana(15).mp4', 'Moana(16).mp4',
+      'Moana(17).mp4'
+    ];
+
+    const moanaButtonsContainer = document.getElementById('moanaButtons');
+
+    // Create buttons dynamically for Moana segments
+    moanaSegments.forEach((segment, index) => {
+      const button = document.createElement('button');
+      button.textContent = `Part ${index + 1}`;
+      button.addEventListener('click', () => {
+        moanaVideo.src = segment;
+        moanaVideo.play();
+        showStickman('stickmanMoana'); // Show stickman animation
       });
+      moanaButtonsContainer.appendChild(button);
+    });
+
+    let currentMoanaSegment = 0;
+
+    moanaVideo.addEventListener('ended', () => {
+      currentMoanaSegment++;
+      if (currentMoanaSegment < moanaSegments.length) {
+        moanaVideo.src = moanaSegments[currentMoanaSegment];
+        moanaVideo.play();
+        showStickman('stickmanMoana'); // Show stickman animation
+      }
+    });
+
+    // For The Paris Under video
+    const theparisunderVideo = document.getElementById('theparisunderVideo');
+
+    theparisunderVideo.addEventListener('play', () => {
+      showStickman('stickmanParis'); // Show stickman animation
     });
   </script>
 </body>
