--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
       width: 100%; /* Ensure videos take up full container width */
       height: auto; /* Maintain aspect ratio */
       margin-bottom: 30px; /* Added extra space */
-      transition: all 0.3s ease-in-out; /* Smooth transition */
+      transition: all 0.3s ease-in-out; /* Smooth transition to avoid abrupt changes */
     }
     .buttons-container {
       display: flex;
