--- a/Index.html
+++ b/Index.html
@@ -6,17 +6,28 @@
   <title>Simple Video Page</title>
   <style>
     body {
-      background-color: white;
+      background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('https://source.unsplash.com/1600x900/?nature,water'); /* Background with gradient and image */
+      background-size: cover; /* Ensure the image covers the entire viewport */
+      background-position: center; /* Center the background image */
+      background-repeat: no-repeat; /* Prevent repeating the image */
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       margin: 0;
+      color: white; /* Ensure text contrast against background */
     }
     video {
-      max-width: 90%;
+      max-width: 100%; /* Ensure videos take up full container width */
       max-height: 90%;
+      width: 100%; /* Ensure videos take up full container width */
+      height: auto; /* Maintain aspect ratio */
       margin-bottom: 30px; /* Added extra space */
+      transition: transform 0.3s ease-in-out; /* Smooth transition for size change */
+      transform: scale(1); /* Initial scale */
+    }
+    video.loaded {
+      transform: scale(0.8); /* Scale down by 20% after loading */
     }
     .buttons-container {
       display: flex;
@@ -68,7 +79,7 @@
   <div class="hidden">
     <div class="video-title">Moana 2</div>
     <video id="moanaVideo" controls>
-      <source src="Moana(1).mp4" type="video/mp4">
+      <source src="https://vimeo.com/1042502734" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
@@ -89,7 +100,7 @@
   <div>
     <div class="video-title">The Red One - Full</div>
     <video controls>
-      <source src="https://www.dropbox.com/scl/fi/ygwlg742cw4lj15rzyrci/theredonemovie.mp4?rlkey=ftgy82av3zzf8mzeog5yyvzm2&dl=1" type="video/mp4">
+      <source src="https://vimeo.com/1042502734" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
@@ -98,7 +109,7 @@
   <div>
     <div class="video-title">Moana 2 - Full</div>
     <video controls>
-      <source src="https://www.dropbox.com/scl/fi/0kw6n7jkfqicgm94hwkk9/Moana-2_1080P_480P.mp4?rlkey=87jrwv5fjf5l3dyu0uridgq9x&dl=1" type="video/mp4">
+      <source src="https://vimeo.com/1042502734" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
@@ -107,7 +118,7 @@
   <div>
     <div class="video-title">The Paris Under - Full</div>
     <video controls>
-      <source src="https://www.dropbox.com/scl/fi/9ku33jabzb7tilyqn78th/Under.Paris.2024.540p.x265.AAC.-9jaRocks.Com.mp4?rlkey=1p7wuean5x9raqi4dvnlo7o7a&dl=1" type="video/mp4">
+      <source src="https://vimeo.com/1042502734" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
@@ -181,5 +192,11 @@
     // For The Paris Under video
     const theparisunderVideo = document.getElementById('theparisunderVideo');
   </script>
+
+  <!-- Credit Section -->
+  <footer>
+    <p>Website created by <strong>Hyperturret</strong></p>
+  </footer>
+
 </body>
 </html>
