--- a/Index.html
+++ b/Index.html
@@ -59,6 +59,21 @@
     .hidden {
       display: none;
     }
+    .download-button {
+      display: block;
+      margin-top: 10px;
+      text-align: center;
+      background-color: #28a745;
+      color: white;
+      padding: 10px 15px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 14px;
+      text-decoration: none;
+    }
+    .download-button:hover {
+      background-color: #218838;
+    }
   </style>
 </head>
 <body>
@@ -103,6 +118,7 @@
       <source src="https://vimeo.com/1042502734" type="video/mp4">
       Your browser does not support the video tag.
     </video>
+    <a href="#" class="download-button">Download Video</a>
   </div>
 
   <!-- Fifth video (Moana 2 - Full) -->
@@ -112,6 +128,7 @@
       <source src="https://download1589.mediafire.com/0m8jbxyz13dg/seol5d5xcsekh6i/Moana_2_1080P_480P.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
+    <a href="#" class="download-button">Download Video</a>
   </div>
 
   <!-- Sixth video (The Paris Under - Full) -->
@@ -121,6 +138,7 @@
       <source src="https://vimeo.com/1042502734" type="video/mp4">
       Your browser does not support the video tag.
     </video>
+    <a href="#" class="download-button">Download Video</a>
   </div>
 
   <script>
