--- a/Index.html
+++ b/Index.html
@@ -44,6 +44,9 @@
       color: white;
       font-size: 12px;
       cursor: pointer;
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
     }
     .buttons-container button:hover {
       background-color: #0056b3;
@@ -58,21 +61,6 @@
     }
     .hidden {
       display: none;
-    }
-    .download-btn {
-      position: absolute;
-      bottom: 10px;
-      left: 10px;
-      padding: 6px 10px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 12px;
-    }
-    .download-btn:hover {
-      background-color: #0056b3;
     }
   </style>
 </head>
@@ -116,6 +104,7 @@
     <div class="video-title">The Red One - Full</div>
     <video controls>
       <source src="https://vimeo.com/1042502734" type="video/mp4">
+      Your browser does not support the video tag.
     </video>
     <button class="download-btn">Download</button>
   </div>
@@ -125,6 +114,7 @@
     <div class="video-title">Moana 2 - Full</div>
     <video controls>
       <source src="https://download1589.mediafire.com/0m8jbxyz13dg/seol5d5xcsekh6i/Moana_2_1080P_480P.mp4" type="video/mp4">
+      Your browser does not support the video tag.
     </video>
     <button class="download-btn">Download</button>
   </div>
@@ -134,6 +124,7 @@
     <div class="video-title">The Paris Under - Full</div>
     <video controls>
       <source src="https://vimeo.com/1042502734" type="video/mp4">
+      Your browser does not support the video tag.
     </video>
     <button class="download-btn">Download</button>
   </div>
